# GL_Camp_Task1

./: CMakeLists.txt  GL_Camp_Task1.sln  README.md
Client/: Client.cpp  Client.vcxproj  Source.cpp
GL_Camp_Task1/: Client.cpp  GL_Camp_Task1.cpp  GL_Camp_Task1.vcxproj  GL_Camp_Task1.vcxproj.filters  Server.cpp
GL_Camp_Task1_Server/: GL_Camp_Task1_Server.vcxproj
PNet/: Constants.h  GL_Camp_Task1.vcxproj  GL_Camp_Task1.vcxproj.filters  IPEndpoint.cpp  IPEndpoint.h  IncludeMe.h  Network.cpp  Network.h  Packet.cpp  Packet.h  Socket.cpp  Socket.h  SocketHandle.h  SocketOption.h
Platform/: General_.h  Windows_.cpp
Server/: Server.cpp  Server.vcxproj  Source.cpp
src/Client/: Client.cpp
src/GL_Camp_Task1_Server/: GL_Camp_Task1_Server.vcxproj.filters
src/PNet/: GL_Camp_Task1.vcxproj  IPVersion.h  Packet.h  PacketException.h  PacketType.h  Socket.h  SocketHandle.h
src/Platform/: IncludeMe.h  Linux_.cpp  Linux_.h  Windows_.h
